[package]
name = "grep-nixos-cache"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Bourdon <delroth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.14.0"
bytes = "1.5.0"
clap = { version = "4.4.3", features = ["derive"]}
futures = "0.3.28"
memmem = "0.1.1"
multimap = "0.10.0"
nix-nar = "0.3.0"
reqwest = { version = "0.11.20", features = ["stream"] }
tokio = { version = "1.32.0", features = ["full"]}
xz2 = "0.1.7"
yara = "0.24.0"
